--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "TimeTrackerPub",
   "private": true,
   "dependencies": {
-    "jquery": "^3.5.1"
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
